# rushes-lab

./: .gitignore  README.md
material-storage/api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
material-storage/api/app/: __init__.py  deps.py  main.py  settings.py
material-storage/api/app/db/: __init__.py  session.py  tables.py
material-storage/api/app/db/migrations/: env.py
material-storage/api/app/db/migrations/versions/: 2026_05_16_0001_initial_schema.py  2026_05_16_0002_project_visibility.py  (+3 more)
material-storage/api/app/models/: __init__.py
material-storage/api/app/routers/: __init__.py  admin.py  approvals.py  assets.py  auth.py  folders.py  groups.py  maintenance.py  projects.py  request_links.py  share.py  users.py  webhooks.py
material-storage/api/app/services/: approval_service.py  approvals_notify.py  arq_pool.py  audit.py  auth.py  contact_sync.py  feishu.py  feishu_card_handlers.py  feishu_cards.py  feishu_client.py  feishu_contact.py  grant_overview.py  invite_notify.py  permissions.py  presign.py  proxy.py  request_link.py  share_service.py  target_resolve.py
material-storage/api/app/static/: index.html  uppy.html
material-storage/api/app/workers/: __init__.py  main.py
material-storage/api/scripts/: backfill_thumbnails.py  deploy_server2.sh  dev_bootstrap.py  e2e_test.sh  grant_org_admin.py  large_file_upload.sh  openfga_write_model.sh  seed_admin_projects.py  seed_demo_data.py  seed_onboarding_project.py  sync_feishu_contacts.py
material-storage/api/scripts/seed_assets/: 操作手册.md  敏感文件夹示例说明.md  权限模型.md
material-storage/api/tests/: test_db_schema.py  test_healthz.py  test_v4_permissions.py
(+117 files in other folders)
