[project]
name = "material-storage-api"
version = "0.1.0"
description = "Material Storage 业务后端 — FastAPI + OpenFGA + MinIO + 飞书集成(ADR-0006 Phase B-1)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    # web framework + ASGI
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",

    # database
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",

    # cache / queue
    "redis>=5.1",
    "arq>=0.26",

    # storage / MinIO
    "boto3>=1.35",
    "aioboto3>=13.2",

    # permissions
    "openfga-sdk>=0.7",

    # 飞书
    "lark-oapi>=1.4",       # larksuite/oapi-sdk-python 主包

    # auth / OIDC
    "authlib>=1.3",
    "python-jose[cryptography]>=3.3",

    # 工具
    "httpx>=0.27",
    "tenacity>=9.0",
    "structlog>=24.4",

    # 媒体处理(worker)
    "ffmpeg-python>=0.2",
    "pillow>=11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-redis",
    "freezegun>=1.5",       # OpenFGA conditional grant 测试用
]

[tool.uv]
package = true

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "ASYNC"]
ignore = ["E501"]   # line length 交 formatter

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
